[package]
name = "pass-it-on-cli"
version = "0.7.0"
authors = ["Kevin Wheelans <kevin.wheelans@proton.me>"]
edition = "2024"
rust-version = "1.88"
description = "A command line tool to send notifications to a pass-it-on server"
documentation = "https://docs.rs/crate/pass-it-on-cli"
homepage = "https://github.com/kwheelans/pass-it-on-cli"
license = "MIT"
keywords = ["pass-it-on", "client"]
readme = "README.md"
repository = "https://github.com/kwheelans/pass-it-on-cli"


[dependencies]
clap = { version = "4", features = ["derive"] }
directories = "6"
pass-it-on = { version = "0.17", features = ["client", "http-client", "pipe-client", "parse-cfg"], default-features = false}
thiserror = "2"
tokio = { version = "1", features = ["sync", "macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = "0.3"


[profile.release]
lto = true
codegen-units = 1
